<resources>
    <string name="app_name">Car Sales</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="register">Зарегистрироваться</string>
    <string name="go_to_login">Уже есть аккаунт?</string>
    <string name="login">Войти</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="go_to_register">Нет аккаунта?</string>
    <string name="name">Имя</string>
    <string name="signOut">Выход</string>

    <string name="car_brand">Марка автомобиля</string>
    <string name="car_model">Модель автомобиля</string>
    <string name="mileage">Пробег</string>
    <string name="year">Год выпуска</string>
    <string name="engine_power">Мощность двигателя</string>
    <string name="transmission">Коробка</string>
    <string name="car_drive_type">Привод</string>
    <string name="price">Цена</string>
    <string name="engine_type">Тип двигателя</string>
    <string name="info_ad">Описание</string>

    <string-array name="car_transmission_array">
        <item>Автоматическая</item>
        <item>Ручная</item>
        <item>Вариатор</item>
        <item>Робот</item>
    </string-array>
    <string-array name="car_drive_type_array">
        <item>Полный</item>
        <item>Передний</item>
        <item>Задний</item>
    </string-array>
    <string-array name="car_engine_type">
        <item>Бензин</item>
        <item>Дизель</item>
        <item>Гибрид</item>
        <item>Электро</item>
    </string-array>

    <string name="ph_front">Фото спереди</string>
    <string name="ph_left">Фото слева</string>
    <string name="ph_back">Фото сзади</string>
    <string name="ph_right">Фото справа</string>
    <string name="ph_interior">Фото салона</string>
    <string name="ph_str_wheel">Фото руля</string>
    <string name="ph_knob">Фото ручки КПП</string>
    <string name="ph_driver_seat">Фото водительского сидения</string>
    <string name="ph_motor">Фото моторного отсека</string>
    <string name="ph_end">Все фото сделаны!</string>

    <string name="city">Город</string>
    <string name="add_ad">Опубликовать</string>
    <string name="retake_photos">Переснять автомобиль</string>

</resources>