<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ad.AddAdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/car_brand_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_brand" />

        <Spinner
            android:id="@+id/car_brand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/car_brand"/>

        <TextView
            android:id="@+id/car_model_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_model" />

        <Spinner
            android:id="@+id/car_model"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/car_model"/>

        <TextView
            android:id="@+id/year_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/year"/>

        <TextView
            android:id="@+id/mileage_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mileage" />

        <EditText
            android:id="@+id/mileage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/engine_power_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/engine_power" />

        <EditText
            android:id="@+id/engine_power"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/transmission_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transmission" />

        <Spinner
            android:id="@+id/transmission"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/transmission"/>

        <TextView
            android:id="@+id/car_drive_type_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_drive_type" />

        <Spinner
            android:id="@+id/car_drive_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/car_drive_type"/>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number" />


    </LinearLayout>

    <Button
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Опубликовать"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>